--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "backbone": "npm:backbone@^1.2.0",
       "bootflat": "npm:bootflat@^2.0.4",
       "cowboy/jquery-throttle-debounce": "github:cowboy/jquery-throttle-debounce@master",
+      "event-class": "npm:event-class@^0.1.0",
       "jquery": "github:components/jquery@^2.1.4",
       "lodash": "npm:lodash@^3.9.3",
       "twbs/bootstrap-sass": "github:twbs/bootstrap-sass@^3.3.4"
